--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -13,7 +13,7 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
   
       - name: Check out code
@@ -24,7 +24,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install opencv-python==4.5.4.60
           pip install easyocr pillow numpy
-          pip3 install --trusted-host pypi.org --trusted-host files.pythonhosted.org <package_name>
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
       - name: run
